# beamng-mcp

./: .gitignore  API_SURFACE.md  LICENSE  README.md  REBUILD.md  analyze_car.py  attach_demo.py  build_rally_pc.py  check_damage.py  drive_summary.py  engineer.py  improve_car.py  lap_analysis.py  lap_telemetry.py  logger.py  outgauge.py  outgauge_logger.py  pc_config.py  pyproject.toml  race_engineer.py  rally_build.py  requirements.txt  server.py  session.py  smoke_test.py  swap_tires.py  tune_and_verify.py
src/beamng_mcp/: __init__.py  app.py  config.py  errors.py  pitwall.py  server.py
src/beamng_mcp/analysis/: __init__.py  balance.py  braking.py  cleaning.py  coach.py  compare.py  corners.py  grip.py  ingest.py  model.py  plots.py  report.py  ride.py  util.py  validity.py
src/beamng_mcp/engineer/: __init__.py  advisor.py  knowledge.py
src/beamng_mcp/optimizer/: __init__.py  runner.py  search.py  space.py
src/beamng_mcp/sim/: __init__.py  context.py  doctor.py  drivelog.py  lua.py  motionsim.py  outgauge.py  pc_config.py  raceline.py  scenario.py  telemetry.py  tuning.py  vehicle.py
src/beamng_mcp/timing/: __init__.py  line.py  recorder.py  statemachine.py
tests/: test_advisor.py  test_app.py  test_balance.py  test_cleaning.py  test_coach.py  test_compare.py  test_config.py  test_doctor.py  test_drivelog.py  test_errors.py  test_ingest.py  test_line.py  test_lua.py  test_metrics.py  test_motionsim.py  test_optimizer.py  test_outgauge.py  test_pc_config.py  test_pitwall.py  test_plots.py  test_raceline.py  test_recorder.py  test_report.py  test_scenario.py  test_server.py  test_statemachine.py  test_telemetry.py  test_tuning.py  test_validity.py  test_vehicle.py
