[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beamng-mcp"
version = "2.1.0"
description = "MCP server for BeamNG.drive (Steam consumer build) with an AI race-engineer loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beamngpy==1.35.1",
    "mcp==1.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
beamng-mcp = "beamng_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/beamng_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["beamng_mcp"]
ignore_missing_imports = true
