[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beamng-mcp"
version = "2.4.0"
description = "MCP server for BeamNG.drive (Steam consumer build) with an AI race-engineer loop"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Iaroslav Sheipak" }]
keywords = ["mcp", "beamng", "racing", "telemetry", "race-engineer", "claude", "motorsport", "sim-racing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "beamngpy==1.35.1",
    "mcp==1.28.1",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/IaroslavSheipak/beamng-mcp"
Issues = "https://github.com/IaroslavSheipak/beamng-mcp/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
beamng-mcp = "beamng_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/beamng_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["beamng_mcp"]
ignore_missing_imports = true
